openapi-generation@67eb800bc361951d186f91e01eca3d62d500788e

--- a/.speakeasy/gen.yaml
+++ b/.speakeasy/gen.yaml
@@ -20,6 +20,7 @@ csharp:
   dotnetVersion: net8.0
   enableSourceLink: false
   flattenGlobalSecurity: true
+  flattenRequests: false
   imports:
     option: openapi
     paths:
