openapi-generation@5119adbb9ad3c56f4552a0ea0b1e43c9a6d35ac0

--- a/.speakeasy/gen.yaml
+++ b/.speakeasy/gen.yaml
@@ -31,6 +31,7 @@ csharp:
   includeDebugSymbols: false
   inputModelSuffix: input
   maxMethodParams: 4
+  methodArguments: require-security-and-request
   outputModelSuffix: output
   packageName: Boltpay.SDK
   packageTags: ""
